# Eyeglass

./: .gitignore  CMakeLists.txt  Eyeglass.geany  LICENSE  Program translation  Program translation.md  README.md  README_en.md
Eyeglass-a78ea6d15adca428d87f69867a5b54e48ff235db/: README.md
docs/: Eyeglass_uml.dia  english_translation.md  structure.md
src/: main.cpp
src/controller/: AbstractController.h  Controller.cpp  Controller.h
src/controllers/: AbstractController.h  controller.cpp
src/exception/: ImageGeometryException.h  ImageLoaderException.h
src/model/: AbstractModel.h  DiffContainer.h  DiffResult.h  Model.cpp  Model.h  PixelDiff.h
src/models/: AbstractModel.h  DiffResult.h
src/utils/: DisplayUtils.h  ImageUtils.cpp  ImageUtils.h  Observer.h  Subject.h
src/view/: AbstractView.h  DiffListTab.cpp  DiffListTab.h  HeatmapTab.cpp  HeatmapTab.h  LayerTab.cpp  LayerTab.h  OriginalViewTab.cpp  OriginalViewTab.h  SideBySideTab.cpp  SideBySideTab.h  View.cpp  View.h  ViewTab.cpp  ViewTab.h
test/: CMakeLists.txt  ModelFixture.cpp  UtilityFixture.cpp  ViewSuite.cpp  testfile.cpp
